fix: update setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,13 +1,13 @@
-
+[bumpversion]
+current_version = 0.1.2
+commit = True
+tag = True
+tag_message = "bump: {current_version} → {new_version}"
+message = "bump: {current_version} → {new_version}"
 
 [aliases]
 release = sdist bdist_wheel
 test = pytest
-
-[bumpversion]
-current_version = 0.1.0
-commit = True
-tag = True
 
 [bumpversion:file:setup.cfg]
 search = version = {current_version}
@@ -21,54 +21,49 @@ replace = __version__ = "{new_version}"
 universal = 1
 
 [darglint]
-docstring_style=sphinx
+docstring_style = sphinx
 
 [flake8]
 exclude = docs/*,setup.py
 max-line-length = 88
-docstring_style=sphinx
+docstring_style = sphinx
+
 [tool:pytest]
 addopts = --ignore=setup.py
 testpaths = tests/
 
-
 [options]
 include_package_data = True
 packages = find:
-
 install_requires =
-  Click
+    Click
 
 [options.extras_require]
 dev =
-  black
-  bump2version
-  darglint
-  flake8-docstrings
-  flake8
-  isort
-  toml
-
+    black
+    bump2version
+    darglint
+    flake8-docstrings
+    flake8
+    isort
+    toml
 dist =
-  twine
-
+    twine
 docs =
-  mkdocs-autorefs
-  mkdocs-include-markdown-plugin
-  mkdocs-material-extensions
-  mkdocs-material
-  mkdocs
-  mkdocstrings-python-legacy
-  mkdocstrings
-  Sphinx
-  watchdog
-
+    mkdocs-autorefs
+    mkdocs-include-markdown-plugin
+    mkdocs-material-extensions
+    mkdocs-material
+    mkdocs
+    mkdocstrings-python-legacy
+    mkdocstrings
+    Sphinx
+    watchdog
 test =
-  pytest
-  pytest-cov
-  safety
-  tox
-
+    pytest
+    pytest-cov
+    safety
+    tox
 
 [metadata]
 name = python_boilerplate
@@ -82,7 +77,7 @@ long_description_content_type = text/markdown
 license_file = LICENSE
 platform = any
 keywords =
-  "python_boilerplate"
+    "python_boilerplate"
 classifiers =
     Development Status :: 3 - Alpha
     Intended Audience :: Developers
@@ -98,4 +93,3 @@ project_urls =
     Repository = "https://github.com/KingMichaelPark/python_boilerplate"
     Changelog = "https://github.com/KingMichaelPark/python_boilerplate/blob/master/CHANGELOG.md"
     Documentation = "https://KingMichaelPark.github.io/python_boilerplate"
-
