--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,9 @@
 [bumpversion]
-current_version = 0.1.2
+current_version = 0.1.3
 commit = True
 tag = True
-tag_message = "bump: {current_version} → {new_version}"
-message = "bump: {current_version} → {new_version}"
+tag_message = bump: {current_version} → {new_version}
+message = bump: {current_version} → {new_version}
 
 [aliases]
 release = sdist bdist_wheel
@@ -35,35 +35,35 @@ testpaths = tests/
 [options]
 include_package_data = True
 packages = find:
-install_requires =
-    Click
+install_requires = 
+	Click
 
 [options.extras_require]
-dev =
-    black
-    bump2version
-    darglint
-    flake8-docstrings
-    flake8
-    isort
-    toml
-dist =
-    twine
-docs =
-    mkdocs-autorefs
-    mkdocs-include-markdown-plugin
-    mkdocs-material-extensions
-    mkdocs-material
-    mkdocs
-    mkdocstrings-python-legacy
-    mkdocstrings
-    Sphinx
-    watchdog
-test =
-    pytest
-    pytest-cov
-    safety
-    tox
+dev = 
+	black
+	bump2version
+	darglint
+	flake8-docstrings
+	flake8
+	isort
+	toml
+dist = 
+	twine
+docs = 
+	mkdocs-autorefs
+	mkdocs-include-markdown-plugin
+	mkdocs-material-extensions
+	mkdocs-material
+	mkdocs
+	mkdocstrings-python-legacy
+	mkdocstrings
+	Sphinx
+	watchdog
+test = 
+	pytest
+	pytest-cov
+	safety
+	tox
 
 [metadata]
 name = python_boilerplate
@@ -76,20 +76,20 @@ long_description = file: README.md
 long_description_content_type = text/markdown
 license_file = LICENSE
 platform = any
-keywords =
-    "python_boilerplate"
-classifiers =
-    Development Status :: 3 - Alpha
-    Intended Audience :: Developers
-    Operating System :: OS Independent
-    Programming Language :: Python
-    Programming Language :: Python :: 3.7
-    Programming Language :: Python :: 3.8
-    Programming Language :: Python :: 3.9
-    Topic :: Software Development :: Libraries :: Python Modules
-    License :: OSI Approved :: MIT License
-project_urls =
-    Homepage = "https://github.com/KingMichaelPark/python_boilerplate"
-    Repository = "https://github.com/KingMichaelPark/python_boilerplate"
-    Changelog = "https://github.com/KingMichaelPark/python_boilerplate/blob/master/CHANGELOG.md"
-    Documentation = "https://KingMichaelPark.github.io/python_boilerplate"
+keywords = 
+	"python_boilerplate"
+classifiers = 
+	Development Status :: 3 - Alpha
+	Intended Audience :: Developers
+	Operating System :: OS Independent
+	Programming Language :: Python
+	Programming Language :: Python :: 3.7
+	Programming Language :: Python :: 3.8
+	Programming Language :: Python :: 3.9
+	Topic :: Software Development :: Libraries :: Python Modules
+	License :: OSI Approved :: MIT License
+project_urls = 
+	Homepage = "https://github.com/KingMichaelPark/python_boilerplate"
+	Repository = "https://github.com/KingMichaelPark/python_boilerplate"
+	Changelog = "https://github.com/KingMichaelPark/python_boilerplate/blob/master/CHANGELOG.md"
+	Documentation = "https://KingMichaelPark.github.io/python_boilerplate"
